<resources>
    <string name="app_name">Word Shuffle</string>

    <string name="word">Word goes here</string>
    <string name="definition">Description of the word goes down here
        \nCan run down here
        \nEven down here</string>
    <string name="total">Total: 0</string>
    <string name="skip">Skip</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="standmes">Arrange the letters in the correct sequence</string>
    <string name="skipped">The last word was</string>
    <string name="correct">That was right! Here is the next word</string>
    <string name="incorrect">That\'s not right Please try again</string>
    <string name="stats">Correct: %d  \u0020 \u0020 \u0020  Skipped: %d </string>



    <string name="banner_ad_unit_id">ca-app-pub-4666553980283897/5095785681</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-4666553980283897/6026310707</string>
    <string name="banner_ad_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_test">ca-app-pub-3940256099942544/1033173712</string>

    <!--<string name="about_source_licenses">Open source licenses</string>-->
    <string name="dialog_close">Close</string>
    <string name="nav_privacy">Privacy Policy</string>
    <string name="nav_terms">Terms and Conditions</string>

</resources>
